<resources>
    <string name="app_name">FPoll</string>
    <string name="title_home">Home</string>
    <string name="title_document">Guide</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_login">Login</string>
    <string name="title_language">Language</string>
    <string name="language_english">English</string>
    <string name="language_vietnamese">Vietnamese</string>
    <string name="language_japanese">Japanese</string>
    <string name="title_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="title_email">Email</string>
    <string name="title_username">User name</string>
    <string name="title_password">Password</string>
    <string name="action_confirm_password">Confirm password</string>
    <string name="remember_account">Remember me</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_google">Google</string>
    <string name="text_twitter">Twitter</string>
    <string name="text_forget_password">Forget your password?</string>
    <string name="text_register">Register</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="server_client_id">
        222836748167-q2gudo6np1o44sqo9v6b8nr336kvcnk8.apps.googleusercontent.com
    </string>
    <string name="title_setting">Setting</string>
    <string name="title_option">Option</string>
    <string name="title_information">Information</string>
    <string name="msg_require_voted">Required to vote</string>
    <string name="msg_hide_voted">Hide voting result</string>
    <string name="msg_optimize_poll">Optimize poll link</string>
    <string name="msg_voting_limit">Set voting limit</string>
    <string name="action_change_password">Set password</string>
    <string name="msg_enter_name">Enter name</string>
    <string name="msg_enter_email">Enter email</string>
    <string name="msg_enter_name_email">Enter name and email</string>
    <string name="title_participant">Participant</string>
    <string name="action_previous">Previous</string>
    <string name="action_continue">Continue</string>
    <string name="action_finish">Finish</string>
    <string name="msg_send_email_information_poll">The following two links have been send to
        %s in one e-mail each.
    </string>
    <string name="hint_enter_email_participant">Enter email of participant</string>
    <string name="title_reset_password">Reset password</string>
    <string name="msg_thank_user">Thanks , %s</string>
    <string name="msg_poll_created">Your poll has been created</string>
    <string name="msg_click_send_email">If you haven\'t receive email</string>
    <string name="msg_participation">Participation link</string>
    <string name="msg_send_link">Send this link to anyone you wish to invite</string>
    <string name="title_link_invited">http://poll.framgia.vn/link/Jwrjub4RRndiMEwy</string>
    <string name="title_copy_link">Copy</string>
    <string name="msg_administration_link">Administration poll</string>
    <string name="title_admin_screen">Manager Poll</string>
    <string name="msg_url_poll">url</string>
    <string name="title_description_poll">Description</string>
    <string name="title_save_data">Save</string>
    <string name="title_time_close_poll">Time close poll</string>
    <string name="title_location">Location</string>
    <string name="title_link_vote">Link vote</string>
    <string name="title_view_option">View option</string>
    <string name="title_view_setting">View setting</string>
    <string name="title_result_poll">Result</string>
    <string name="title_no_option">No</string>
    <string name="title_vote_number">Vote</string>
    <string name="msg_status_pool">Poll open</string>
    <string name="action_view_history">Views History Poll</string>
    <string name="action_edit_poll">Edit this poll</string>
    <string name="action_delete_poll">Delete this poll</string>
    <string name="action_close_poll">Close this poll</string>
    <string name="action_duplicate_poll">Create duplicate</string>
    <string name="msg_one">1</string>
    <string name="msg_send_email">If you want send mail to participants, let enter email into
        below textbox!
    </string>
    <string name="title_initiate">Initiated</string>
    <string name="title_participate">Participated</string>
    <string name="title_close">Closed</string>
    <string name="title_poll_initiate">Poll Initiated</string>
    <string name="title_poll_participate">Poll Participated</string>
    <string name="title_poll_close">Poll Closed</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>
    <string name="title_history">Poll history</string>
    <string name="title_subject">%s</string>
    <string name="title_participants">Participants: %d</string>
    <string name="title_latest_activity">Latest activity: %s</string>
    <string name="title_view_administer_page">View Administer</string>
    <string name="msg_link">Link</string>
    <string name="hint_poll_title">Poll\'s title</string>
    <string name="hint_position">Position</string>
    <string name="hint_choose_time">Choose time</string>
    <string name="msg_confirm_pass_not_success">Password confirm incorrect, please check again!
    </string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_other">Other</string>
    <string name="msg_invalidate_email">Email request @</string>
    <string name="msg_username_not_empty">Username Not Empty</string>
    <string name="msg_email_invalidate">Email invalidate</string>
    <string name="msg_password_not_empty">Password not empty</string>
    <string name="msg_length_password">Password min length 6 charater</string>
    <string name="msg_image_not_choose">Image Not choose</string>
    <string name="title_permissions">Request Permissions</string>
    <string name="title_reques_pemissions">Request Permissions</string>
    <string name="message_request_read_pemissions">required reading for image rights</string>
    <string name="msg_login_error">Login failed</string>
    <string name="msg_login_success">Login success</string>
    <string name="title_forgot_password">Reset password</string>
    <string name="action_edit_profile_avatar">Avatar</string>
    <string name="address_edit_profile">Address</string>
    <string name="sex_edit_profile">Gender</string>
    <string name="title_action_edit_profile">Edit</string>
    <string name="title_edit_profile">Profile</string>
    <string name="msg_copy_success">Copy Successfully</string>
    <string name="time_close_vote">Time for close vote :</string>
    <string name="show_vote_details">Show vote details</string>
    <string name="title_no">No</string>
    <string name="title_vote">Vote</string>
    <string name="title_one_answer">Single choice</string>
    <string name="title_more_answer">Multiple choice</string>
    <string name="title_views_history">Views History</string>
    <string name="title_edit_this_poll">Edit this poll</string>
    <string name="title_close_this_poll">Close this poll</string>
    <string name="title_create_duplicate">Create duplicate</string>
    <string name="title_activity_manage">Activity</string>
    <string name="title_poll">title poll</string>
    <string name="hint_enter_name">Enter your name</string>
    <string name="hint_enter_comment">Enter your comment…</string>
    <string name="action_save_comment">Save Comment</string>
    <string name="title_introduce_vote_poll">Create a poll fast and easy</string>
    <string name="title_introduce_chart_poll">Result illustrated by bar chart and pie chart</string>
    <string name="title_introduce_security">Guaranteed security by password of poll</string>
    <string name="title_introduce_export_poll">Can export result to PDF file or EXCEL file</string>
    <string name="title_introduce_support_poll">Support multiple deceive: laptop or mobile</string>
    <string name="title_introduce_share_poll">Share poll by facebook</string>
    <string name="title_copy_right">Copyright 2016 Framgia, Inc. All rights reserved.</string>
    <string name="title_address_company">13F Keangnam Landmark 72 Tower, Plot E6, Pham Hung Road,
        Nam Tu Liem, Ha Noi, Viet Nam
    </string>
    <string name="title_phone_company">84–4–3795–5417</string>
    <string name="title_email_company">hr_team@framgia.com</string>
    <string name="title_introduce_poll">Fpoll - a simple, convinient and powerfull Poll System
    </string>
    <string name="title_facebook_company">https://www.facebook.com/FramgiaVietnam</string>
    <string name="title_github_company">\"https://github.com/framgia\"</string>
    <string name="title_linkedin_company">https://www.linkedin.com/company/framgia-vietnam</string>
    <string name="msg_not_load_item">Load data failed.</string>
    <string name="title_re_open">Reopen</string>
    <string name="title_manage_poll">Manage poll</string>
    <string name="title_voting">Voting</string>
    <string name="msg_url_link">http://poll.framgia.vn/link/</string>
    <string name="msg_multi_email">multiple emails separated by spaces \",\"</string>
    <string name="title_introduce_app">Introduce</string>
    <string name="hint_number_limit">Number limit</string>
    <string name="msg_content">Content</string>
    <string name="hint_name">Name</string>
    <string name="msg_interface">UI(Interface)</string>
    <string name="msg_feedback_about">Feedback about</string>
    <string name="msg_process">Process</string>
    <string name="msg_web_content">Website content</string>
    <string name="msg_others">Others</string>
    <string name="title_send">Send</string>
    <string name="msg_send_feedback_success">Send feedback success</string>
    <string name="msg_content_error">Content do not empty</string>
    <string name="msg_name_error">Name do not empty</string>
    <string name="title_option_link">http://poll.framgia.vn/link/%s</string>
    <string name="path_link_fake"><![CDATA[DFGHJOIY&awbca78abcjhbsaT]]></string>
    <string name="hint_link_voting">Link voting</string>
    <string name="hint_link_manage_poll">Link manager poll</string>
    <string name="msg_date_error">Finish time have to bigger than now</string>
    <string name="title_table">Table</string>
    <string name="title_pie_chart">Pie chart</string>
    <string name="title_bar_chart">Bar chart</string>
    <string name="msg_register_success">Register success!</string>
    <string name="msg_register_status_error">Register Error ! Email is exists in database. Please
        enter a new email
    </string>
    <string name="msg_loading">Loading</string>
    <string name="title_no_internet">No access internet</string>
    <string name="post_comment">%d Comment</string>
    <string name="post_comments">%d Comments</string>
    <string name="post_user">%d User</string>
    <string name="post_users">%d Users</string>
    <string name="error_load_comments">Failed to load comments</string>
    <string name="action_post_comment">Post comment</string>
    <string name="action_show_comments">Show comments</string>
    <string name="action_hide_comments">Hide comments</string>
    <string name="hint_feedback">Enter your feedback</string>
    <string name="msg_send_feedback_error">Send feedback error</string>
    <string name="action_view_option">View detail option</string>
    <string name="action_export_pdf">Export PDF</string>
    <string name="action_export_excel">Export excel</string>
    <string name="title_image">Image</string>
    <string name="msg_type_email">\@</string>
    <string name="title_not_same_email_when_vote">Not the same email when vote</string>
    <string name="title_type_email_when_vote">Add type of email when voted</string>
</resources>