<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">

        <TextView
            android:id="@+id/text_user_create_poll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_thank_user"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_30"/>

        <TextView
            android:id="@+id/text_poll_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/msg_poll_created"
            android:textColor="@color/color_black_700"
            android:textSize="@dimen/sp_25"/>

        <TextView
            android:id="@+id/text_resend_email"
            style="@style/TextViewStatusPoll"
            android:text="@string/msg_send_email"
            android:textColor="@color/color_black_700"/>

        <TextView
            android:id="@+id/text_click_send_email"
            style="@style/TextViewStatusPoll"
            android:text="@string/msg_click_send_email"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_20"/>

        <TextView
            style="@style/TextViewStatusPoll"
            android:text="@string/msg_participation"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_20"/>

        <TextView
            style="@style/TextViewStatusPoll"
            android:text="@string/msg_send_link"
            android:textColor="@color/color_black_700"
            android:textSize="@dimen/sp_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:id="@+id/text_link_invite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/title_link_invited"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/sp_20"/>

            <Button
                android:id="@+id/button_coppy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/color_tit_register"
                android:gravity="center"
                android:text="@string/title_copy_link"
                android:textAllCaps="false"
                android:textColor="@color/color_white"/>
        </LinearLayout>

        <TextView
            style="@style/TextViewStatusPoll"
            android:text="@string/msg_administration_link"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_30"/>

        <TextView
            android:id="@+id/button_manager_poll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/title_admin_screen"
            android:textAllCaps="false"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

</LinearLayout>
