<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/title_not_same_email_when_vote"
            android:textColor="@color/color_grey_700"
            android:textSize="@dimen/sp_14"/>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/title_type_email_when_vote"
            android:textColor="@color/color_grey_700"
            android:textSize="@dimen/sp_14"/>

        <LinearLayout
            style="@style/LinearLayoutStyle">

            <android.support.v7.widget.AppCompatTextView
                style="@style/ImageViewStyle"
                android:gravity="center"
                android:text="@string/msg_type_email"
                android:textSize="@dimen/sp_18"/>

            <android.support.v7.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:hint="@string/hint_enter_email_participant"
                android:paddingLeft="@dimen/dp_4"/>
        </LinearLayout>
    </LinearLayout>
</layout>
