<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/bg_page_setting"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_teal_500"
            android:padding="@dimen/dp_15"
            android:text="@string/title_result_poll"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_30">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_no_option"/>

            <TextView
                style="@style/TextViewResultPoll"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/title_option"/>

            <TextView
                android:layout_width="@dimen/dp_70"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_vote_number"
                android:textSize="@dimen/sp_17"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>
