<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_white"
        app:cardCornerRadius="@dimen/dp_1"
        app:cardElevation="@dimen/dp_1"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_16">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_2"
                    android:padding="@dimen/dp_8"
                    android:text="@string/title_subject"
                    android:textSize="@dimen/sp_20"/>

                <TextView
                    android:id="@+id/text_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_2"
                    android:padding="@dimen/dp_8"
                    android:text="@string/title_participants"/>

                <TextView
                    android:id="@+id/text_latest_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_2"
                    android:padding="@dimen/dp_8"
                    android:text="@string/title_latest_activity"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_administer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/dp_8"
                android:text="@string/msg_link"
                android:textColor="@color/color_blue"
                android:textSize="@dimen/sp_18"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>
