<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.framgia.fpoll.ui.feedback.FeedbackHandler"/>

        <variable
            name="presenter"
            type="com.framgia.fpoll.ui.feedback.FeedbackPresenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:paddingTop="@dimen/dp_40">

        <LinearLayout
            style="@style/LinearLayoutStyle">

            <android.support.v7.widget.AppCompatImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/ic_person_black_24dp"/>

            <android.support.v7.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:hint="@string/hint_enter_name"
                android:inputType="textEmailAddress"
                android:text="@={presenter.name}"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutStyle">

            <android.support.v7.widget.AppCompatImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/ic_email_white_24px"/>

            <android.support.v7.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@={presenter.email}"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutStyle">

            <ImageView
                style="@style/ImageViewStyle"
                android:src="@drawable/ic_feedback_white_24px"/>

            <android.support.v7.widget.AppCompatEditText
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="start"
                android:hint="@string/hint_feedback"
                android:minHeight="@dimen/dp_150"
                android:text="@={presenter.content}"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            style="@style/FPollCardView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_30"
            android:onClick="@{()->handler.clickSendFeedback()}">

            <android.support.v7.widget.AppCompatTextView
                style="@style/FPollTextCardView"
                android:text="@string/title_send"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>
